--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <link rel="stylesheet" href="css/owl.carousel.min.css">
         <link rel="stylesheet" href="css/owl.theme.default.min.css">
         <link rel="stylesheet" href="css/animate.css">
-        <link rel="stylesheet" href="css/jquery.flipster.min.css">
         <link rel="stylesheet" href="css/validetta.min.css">
         <link rel="stylesheet" href="css/style.css">
         <!-- /stylesheets -->
@@ -32,10 +31,10 @@
         <!-- header -->
         <header>
             <!-- navbar -->
-            <nav>
+            <nav class="nav-home-page">
                 <div class="brand-area">
                     <a href="#"><img class="main-logo" src="mockup/images/logo/logo.png" alt="Haytech-Solutions"></a>
-                    <label>
+                    <label class="labelAfter">
                     <select class="selectpicker1" data-width="fit">
                         <option>ENG</option>
                         <option>FR</option>
@@ -48,14 +47,13 @@
                 <div class="main-navbar">
                     <hr class="hr-navbarMenu">
                     <ul>
-                        <li><a href="#" class="active">Accueil</a></li>
-                        <li><a href="logiciel.html">Le logiciel</a></li>
-                        <li><a href="creation.html">Création site internet</a></li>
-                        <li><a href="referencement.html">Référencement</a></li>
-                        <li><a href="diffusion.html">Diffusion d'annonces</a></li>
-                        <li><a href="entreprise.html">L’entreprise</a></li>
-                        <li><a href="sav.html">SAV</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index.html" class="active">HOME</a></li>
+                        <li><a href="About.html">ABOUT US</a></li>
+                        <li><a href="#">OUR SERVICE</a></li>
+                        <li><a href="#">ADDUCTION AND INFORMATION</a></li>
+                        <li><a href="#">RECRUIPMENT</a></li>
+                        <li><a href="#">PARTNERS</a></li>
+                        <li><a href="#">CONTACTS</a></li>
                     </ul>
                 </div>
             </nav>
@@ -65,7 +63,7 @@
             <div class="homepage-slider owl-carousel">
                 <div class="item">
                     <div class="col-md-12">
-                    <div class="col-md-6 col-sm-12 col-xs-12"><img src="mockup/images/HOME-PAGE/slayd-1.png" alt=""></div>
+                    <div class="col-md-6 col-sm-12 col-xs-12"><img class="img-responsive" src="mockup/images/HOME-PAGE/slayd-1.png" alt=""></div>
                         <div class="col-md-6 col-sm-12 col-xs-12">
                             <h1>WEB DESIGN</h1>
                             <h3>Choose a hight-performance communication medium</h3>
@@ -76,7 +74,7 @@
                 </div>
                 <div class="item">
                     <div class="col-md-12">
-                        <div class="col-md-6 col-sm-12 col-xs-12"><img src="mockup/images/HOME-PAGE/slayd-2.png" alt=""></div>
+                        <div class="col-md-6 col-sm-12 col-xs-12"><img class="img-responsive" src="mockup/images/HOME-PAGE/slayd-2.png" alt=""></div>
                         <div class="col-md-6 col-sm-12 col-xs-12">
                             <h1>WEB DESIGN</h1>
                             <h3>Choose a hight-performance communication medium</h3>
@@ -91,9 +89,287 @@
             </div>
         </header>
         <!-- /header -->
+<section class="first">
+<div class="container content">
+    <div class="row">
+            <div class="col-md-6 col-sm-12 col-xs-12">
+                <h1>SHORTLEY ABOUT US</h1>
+                <p>Haytech Solutions has been developing for over ten years
+                    alongside professionals with the goal to provide them sustainable
+                    and efficient solutions in terms of development and business strategy.
+                </p>
+                <p>
+                    Our teams are at your disposal with a wide range of expertise: precise
+                    assessment and analysis of company needs, definition of goals, implementation
+                    of highly developed communication tools and support of company along each stage of the process, and beyond.
+                </p>
+                <p>
+                    All of our business solutions are based on the use of the most advanced technologies and are designed
+                    to sustainably meet the expectations and needs of our customers.
+                </p>
+                <a href="#">
+                    <button type="button" name="button" class="button-more">VIEW MORE</b></button></a>
+            </div>
+            <div class="col-md-6 col-sm-12 col-xs-12">
+                <img src="mockup/images/HOME-PAGE/about-us.png" alt="">
+            </div>
+        </div>
+    </div>
 
-
-
+<div class="container slide2">
+    <div class="owl-carousel owl-theme ninth-section-carousel">
+        <div class="item">
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                <h3>OUR SERVICES</h3>
+                </div>
+                <div class="col-md-2 col-sm-2 col-xs-12">
+                    <img src="mockup/images/HOME-PAGE/icon-1.png" alt="">
+                </div>
+                <div class="col-md-10 col-sm-10 col-xs-12">
+                    <h4>WEB DESIGN DETAILS</h4>
+                    <p>Search engine optimisation is an essential factor for performance of your internet business.
+                        Visibility to potential customers on major search engines is important to generate
+                        a maximum quantity of visits...
+                    </p>
+                    <a href="#">VIEW MORE > </a>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <h3>OUR SERVICES</h3>
+                </div>
+                <div class="col-md-2 col-sm-2 col-xs-12">
+                    <img src="mockup/images/HOME-PAGE/icon-2.png" alt="">
+                </div>
+                <div class="col-md-10 col-sm-10 col-xs-12">
+                    <h4>Search Engine Optimisation</h4>
+                    <p>Search engine optimisation is an essential factor for performance of your internet business.
+                        Visibility to potential customers on major search engines is important to generate
+                        a maximum quantity of visits...
+                    </p>
+                    <a href="#">VIEW MORE > </a>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <h3>OUR SERVICES</h3>
+                </div>
+                <div class="col-md-2 col-sm-2 col-xs-12">
+                    <img src="mockup/images/HOME-PAGE/icon-3.png" alt="">
+                </div>
+                <div class="col-md-10 col-sm-10 col-xs-12">
+                    <h4>Web hosting</h4>
+                    <p>Search engine optimisation is an essential factor for performance of your internet business.
+                        Visibility to potential customers on major search engines is important to generate
+                        a maximum quantity of visits...
+                    </p>
+                    <a href="#">VIEW MORE > </a>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <h3>OUR SERVICES</h3>
+                </div>
+                <div class="col-md-2 col-sm-2 col-xs-12">
+                    <img src="mockup/images/HOME-PAGE/icon-4.png" alt="">
+                </div>
+                <div class="col-md-10 col-sm-10 col-xs-12">
+                    <h4>Applications and Software</h4>
+                    <p>Search engine optimisation is an essential factor for performance of your internet business.
+                        Visibility to potential customers on major search engines is important to generate
+                        a maximum quantity of visits...
+                    </p>
+                    <a href="#">VIEW MORE > </a>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <h3>OUR SERVICES</h3>
+                </div>
+                <div class="col-md-2 col-sm-2 col-xs-12">
+                    <img src="mockup/images/HOME-PAGE/icon-5.png" alt="">
+                </div>
+                <div class="col-md-10 col-sm-10 col-xs-12">
+                    <h4>Systems and Network</h4>
+                    <p>Search engine optimisation is an essential factor for performance of your internet business.
+                        Visibility to potential customers on major search engines is important to generate
+                        a maximum quantity of visits...
+                    </p>
+                    <a href="#">VIEW MORE > </a>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <h3>OUR SERVICES</h3>
+                </div>
+                <div class="col-md-2 col-sm-2 col-xs-22">
+                    <img src="mockup/images/HOME-PAGE/icon-6.png" alt="">
+                </div>
+                <div class="col-md-10 col-sm-10 col-xs-12">
+                    <h4>VOIP solutions</h4>
+                    <p>Search engine optimisation is an essential factor for performance of your internet business.
+                        Visibility to potential customers on major search engines is important to generate
+                        a maximum quantity of visits...
+                    </p>
+                    <a href="#">VIEW MORE > </a>
+                </div>
+            </div>
+        </div>
+     </div>
+    </div>
+</section>
+        <section class="second">
+            <div class="container">
+                <div class="row text-center">
+                    <h3>OUR PARTNERS</h3>
+                    <hr>
+                </div>
+            <div class="owl-carousel owl-theme site-second-carousel">
+                <div class="item"><img src="mockup/images/HOME-PAGE/partner-logo.png" alt=""></div>
+                <div class="item"><img src="mockup/images/HOME-PAGE/partner-logo.png" alt=""></div>
+                <div class="item"><img src="mockup/images/HOME-PAGE/partner-logo.png" alt=""></div>
+                <div class="item"><img src="mockup/images/HOME-PAGE/partner-logo.png" alt=""></div>
+                <div class="item"><img src="mockup/images/HOME-PAGE/partner-logo.png" alt=""></div>
+                <div class="item"><img src="mockup/images/HOME-PAGE/partner-logo.png" alt=""></div>
+                <div class="item"><img src="mockup/images/HOME-PAGE/partner-logo.png" alt=""></div>
+                <div class="item"><img src="mockup/images/HOME-PAGE/partner-logo.png" alt=""></div>
+            </div>
+        </div>
+        </section>
+<section class="our-team container">
+    <!-- Team Members Row -->
+    <div class="row">
+        <div class="col-lg-12 col-md-12 text-center">
+            <h3>OUR TEAM</h3>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center">
+            <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+            <h3>John Smith</h3>
+            <p>What does this team member to? Keep it short! This is also a great spot for social!</p>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center">
+            <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+            <h3>John Smith</h3>
+            <p>What does this team member to? Keep it short! This is also a great spot for social!</p>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center">
+            <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+            <h3>John Smith</h3>
+            <p>What does this team member to? Keep it short! This is also a great spot for social!</p>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center">
+            <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+            <h3>John Smith</h3>
+            <p>What does this team member to? Keep it short! This is also a great spot for social!</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center">
+            <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+            <h3>John Smith</h3>
+            <p>What does this team member to? Keep it short! This is also a great spot for social!</p>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center">
+            <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+            <h3>John Smith</h3>
+            <p>What does this team member to? Keep it short! This is also a great spot for social!</p>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center">
+            <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+            <h3>John Smith</h3>
+            <p>What does this team member to? Keep it short! This is also a great spot for social!</p>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center">
+            <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+            <h3>John Smith</h3>
+            <p>What does this team member to? Keep it short! This is also a great spot for social!</p>
+        </div>
+    </div>
+</section>
+        <section class="footer container-fluid">
+            <div class="row contacts">
+            <h3>OUR-CONTACTS</h3>
+            </div>
+            <div class="row">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d762.1434279898533!2d44.50350821872242!3d40.174044024848584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3862e28be366dad0!2sMoscow+House!5e0!3m2!1sen!2s!4v1498391923833" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+            <div class="container information">
+                <div class="row">
+                        <div class="col-md-4 col-sm-4 col-xs-12">
+                        <p>
+                            <span class="fa-stack fa-lg">
+                              <i class="fa fa-phone"></i>
+                            </span>
+                            +374 (0)41 516 143
+                        </p>
+                        <p>Work times 11:00 - 20:00 PM  <span>MO-FR</span></p>
+                            <p>
+                                <span class="fa-stack fa-lg">
+                                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                                </span>
+                                Lorem Ipsum is simply dummy text of the printing
+                            </p>
+                            <p>
+                                <span class="fa-stack fa-lg pull-left">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                </span>
+                                Lorem Ipsum is simply dummy text of the printing and
+                                typesetting industry. Lorem Ipsum the industry's
+                            </p>
+                            <div class="social">
+                                <a href="#"><img src="mockup/images/HOME-PAGE/istagram-icon.png"  alt="instagram"></a>
+                                <a href="#"><img src="mockup/images/HOME-PAGE/facebook-icon.png"  alt="facebook"></a>
+                            </div>
+                    </div>
+                    <div class="col-md-5 col-sm-5 col-xs-12">
+                        <div class="mail">
+                        <input type="text" placeholder="EMAIL">
+                        <button>SEND</button>
+                            <form>
+                                <div class="form-group">
+                                    <textarea class="form-control" rows="5" id="comment"></textarea>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-3 col-xs-12">
+                        <ul>
+                            <li><a href="#">HOME</a></li>
+                            <li><a href="#">ABOUT US</a></li>
+                            <li><a href="#">OUR SERVICE</a></li>
+                            <li><a href="#">ADDUCTION AND INFORMATION</a></li>
+                            <li><a href="#">RECRUIPMENT</a></li>
+                            <li><a href="#">PARTNERS</a></li>
+                            <li><a href="#">CONTACTS</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="container footer-logo">
+            <div class="row">
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                <img class="img-responsive" src="mockup/images/HOME-PAGE/footer-logo.png"  alt="footer">
+               </div>
+                <div class="col-md-8 col-sm-8 col-xs-12">
+                    <p>All Rights Reserved © Haytech Solutions 2017</p>
+                </div>
+            </div>
+        </div>
+        <!--scroll top-->
+        <div id="gotop"></div>
+        <!--scroll top-->
 
 
         <!-- js -->
@@ -101,11 +377,9 @@
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/owl.carousel.min.js"></script>
         <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-        <script type="text/javascript" src="js/jquery.flipster.min.js"></script>
         <script type="text/javascript" src="js/validetta.min.js"></script>
         <script type="text/javascript" src="js/validettaLang-fr-FR.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <!-- /js -->
-
     </body>
 </html>
