--- a/sav.html
+++ b/sav.html
@@ -51,7 +51,7 @@
                     <ul class="page-nav-ul">
                         <li><a href="index.html">Accueil</a></li>
                         <li><a href="logiciel.html">Le logiciel</a></li>
-                        <li><a href="creation.html">Création site internet</a></li>
+                        <li><a href="About.html">Création site internet</a></li>
                         <li><a href="referencement.html">Référencement</a></li>
                         <li><a href="diffusion.html">Diffusion d'annonces</a></li>
                         <li><a href="entreprise.html">L’entreprise</a></li>
@@ -277,7 +277,7 @@
                                 <ul>
                                     <li><a href="index.html">Accueil</a></li>
                                     <li><a href="logiciel.html">Le logiciel</a></li>
-                                    <li><a href="creation.html">Création site internet</a></li>
+                                    <li><a href="About.html">Création site internet</a></li>
                                     <li><a href="referencement.html">Référencement</a></li>
                                     <li><a href="diffusion.html">Diffusion d'annonces</a></li>
                                     <li><a href="entreprise.html">L’entreprise</a></li>
