--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <hr class="hr-navbarMenu">
                     <ul>
                         <li><a href="index.html" class="active">HOME</a></li>
-                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="about.html">ABOUT US</a></li>
                         <li><a href="ourService.html">OUR SERVICE</a></li>
                         <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
                         <li><a href="reqruipment.html">RECRUIPMENT</a></li>
