--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <!-- /stylesheets -->
 </head>
 <body>
-<section class="reqruipment">
+<section class="aboutPage">
     <section class="secondPage">
         <!-- header -->
         <header class="header">
@@ -47,10 +47,10 @@
                     <hr class="hr-navbarMenu">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="about.html">ABOUT US</a></li>
+                        <li><a href="about.html" class="active">ABOUT US</a></li>
                         <li><a href="ourService.html">OUR SERVICE</a></li>
                         <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
-                        <li><a href="reqruipment.html" class="active">RECRUIPMENT</a></li>
+                        <li><a href="reqruipment.html">RECRUIPMENT</a></li>
                         <li><a href="partners.html">PARTNERS</a></li>
                         <li><a href="contact.html">CONTACTS</a></li>
                     </ul>
@@ -60,24 +60,42 @@
         </header>
         <!-- /header -->
     </section>
-
-
-
-
+<section class="about">
+    <div class="container">
+    <div class="main-content">
+        <div class="row section-boxes">
+            <div class="col-xs-12 col-sm-6">
+                <div class="section-box-inner">
+                    <div class="cover-image-area">
+                        <img src="http://dev.i-w-s-logiciel.com/img/sav/1.png" alt="">
+                    </div>
+                    <div class="section-text-area">
+                        <h2 class="section-box-title">Une équipe d’experts à votre écoute</h2>
+                        <p>Depuis plus de 19 ans, nous accompagnons chacun de nos clients et veillons à leur apporter une qualité de services toujours plus grande.<br>Pour nos équipes, disponibilité et réactivité constituent deux valeurs essentielles à la satisfaction client.<br>Basé à Genève, le Service Après-Vente IWS assure quotidiennement une assistance technique performante aux agences immobilières clientes qui en ont besoin.<br>Réactive, souriante et à l’écoute, notre équipe d’experts vous apporte des réponses claires et sur mesure.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 box-border">
+                <div class="section-box-inner">
+                    <div class="cover-image-area">
+                        <img src="http://dev.i-w-s-logiciel.com/img/sav/2.png" alt="">
+                    </div>
+                    <div class="section-text-area">
+                        <h3 class="section-box-title">Un traitement efficace de toutes vos demandes</h3>
+                        <p>L’objectif de notre équipe : traiter efficacement 100% des demandes clients !<br><br>C’est pourquoi nous mettons à votre disposition notre double compétence :</p>
+                        <ul class="content-list-1">
+                            <li>Une capacité à vous guider à travers les moindres fonctionnalités du logiciel pour agence immobilière Hatech-Solutions et ses astuces</li>
+                            <li>Une parfaite maîtrise de votre métier et de ses contraintes</li>
+                        </ul>
+                        <p>Si nécessaire, une « prise en main » à distance vous sera proposée, afin de cibler au mieux votre demande.<br>
+                            Un ticket vous est automatiquement attribué lorsque vous nous contactez par téléphone ou par email. Le Service concerné prend ensuite contact avec vous afin de répondre à l'ensemble de vos questions.<br>Ce système de tickets nous permet de vous offrir un suivi personnalisé et surveillé ; nous conservons ainsi l'historique de l'ensemble de nos échanges pour vous assurer un suivi client toujours plus performant. Avec ce système, 97 % des demandes reçues sont traitées en moins de 48h.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 </section>
-
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br>
-
     <section class="footer-shadow">
         <div class="container footer-logo">
             <div class="row">
