--- a/adduction.html
+++ b/adduction.html
@@ -47,7 +47,7 @@
                     <hr class="hr-navbarMenu">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="about.html">ABOUT US</a></li>
                         <li><a href="ourService.html">OUR SERVICE</a></li>
                         <li><a href="adduction.html" class="active">ADDUCTION AND INFORMATION</a></li>
                         <li><a href="reqruipment.html">RECRUIPMENT</a></li>
