--- a/ourService.html
+++ b/ourService.html
@@ -48,8 +48,8 @@
             <hr class="hr-navbarMenu">
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">ABOUT US</a></li>
-                <li><a class="active" href="ourService.html" class="active">OUR SERVICE</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
+                <li><a href="ourService.html" class="active">OUR SERVICE</a></li>
                 <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
                 <li><a href="reqruipment.html">RECRUIPMENT</a></li>
                 <li><a href="partners.html">PARTNERS</a></li>
