--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <div class="mobile-nav-button">
                 <a class="mobile-nav-trigger"><i class="fa fa-bars" aria-hidden="true"></i></a>
             </div>
-            <a href="#"><img class="secLogo" src="img/secondPageLogo.png" alt=""></a>
+            <a href="index.html"><img class="secLogo" src="img/secondPageLogo.png" alt=""></a>
             <div class="main-navbar">
                 <hr class="hr-navbarMenu">
                 <ul>
@@ -50,7 +50,7 @@
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="ourService.html">OUR SERVICE</a></li>
                     <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
-                    <li><a href="reqruipment.html">RECRUIPMENT</a></li>
+                    <li><a href="reqruitment.html">RECRUITMENT</a></li>
                     <li><a href="partners.html">PARTNERS</a></li>
                     <li><a href="contact.html" class="active">CONTACTS</a></li>
                 </ul>
@@ -94,9 +94,9 @@
             </div>
             <div class="col-md-5 col-sm-5 col-xs-12">
                 <div class="mail">
-                    <input type="text" placeholder="EMAIL">
+                    <form method="post" id="contact-page-form">
+                    <input type="text" placeholder="EMAIL" data-validetta="required">
                     <button>SEND</button>
-                    <form>
                         <div class="form-group">
                             <textarea class="form-control" rows="5" id="comment" placeholder="Your message"></textarea>
                         </div>
@@ -109,7 +109,7 @@
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="ourService.html">OUR SERVICE</a></li>
                     <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
-                    <li><a href="reqruipment.html">RECRUIPMENT</a></li>
+                    <li><a href="reqruitment.html">RECRUITMENT</a></li>
                     <li><a href="partners.html">PARTNERS</a></li>
                     <li><a href="contact.html">CONTACTS</a></li>
                 </ul>
