--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- navbar -->
             <nav class="nav-home-page">
                 <div class="brand-area">
-                    <a href="#"><img class="main-logo" src="img/logo.png" alt="Haytech-Solutions"></a>
+                    <a class="animated fadeInDown" href="#"><img class="main-logo" src="img/logo.png" alt="Haytech-Solutions"></a>
                     <label class="labelAfter">
                     <select class="selectpicker1" data-width="fit">
                         <option>ENG</option>
@@ -48,7 +48,7 @@
                         <li><a href="about.html">ABOUT US</a></li>
                         <li><a href="ourService.html">OUR SERVICE</a></li>
                         <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
-                        <li><a href="reqruipment.html">RECRUIPMENT</a></li>
+                        <li><a href="reqruitment.html">RECRUITMENT</a></li>
                         <li><a href="partners.html">PARTNERS</a></li>
                         <li><a href="contact.html">CONTACTS</a></li>
                     </ul>
@@ -259,7 +259,8 @@
                 </div>
             </div>
         </div>
-     </div>
+
+    </div>
     </div>
 </section>
         <section class="second">
@@ -287,7 +288,7 @@
             <h3>OUR TEAM</h3>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center">
-            <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+            <img class="img-circle img-responsive img-center"  src="http://placehold.it/200x200" alt="">
             <h3>John Smith</h3>
             <p>What does this team member to? Keep it short! This is also a great spot for social!</p>
         </div>
@@ -367,9 +368,9 @@
                     </div>
                     <div class="col-md-5 col-sm-5 col-xs-12">
                         <div class="mail">
-                        <input type="text" placeholder="EMAIL">
-                        <button>SEND</button>
-                            <form>
+                            <form method="post" id="contact-page-form">
+                                <input type="text" placeholder="EMAIL" data-validetta="required">
+                                <button>SEND</button>
                                 <div class="form-group">
                                     <textarea class="form-control" rows="5" id="comment" placeholder="Your message"></textarea>
                                 </div>
@@ -382,7 +383,7 @@
                             <li><a href="about.html">ABOUT US</a></li>
                             <li><a href="ourService.html">OUR SERVICE</a></li>
                             <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
-                            <li><a href="reqruipment.html">RECRUIPMENT</a></li>
+                            <li><a href="reqruitment.html">RECRUITMENT</a></li>
                             <li><a href="partners.html">PARTNERS</a></li>
                             <li><a href="contact.html">CONTACTS</a></li>
                         </ul>
