--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                 <div class="mobile-nav-button">
                     <a class="mobile-nav-trigger"><i class="fa fa-bars" aria-hidden="true"></i></a>
                 </div>
-                <a href="#"><img class="secLogo" src="img/secondPageLogo.png" alt=""></a>
+                <a  href="index.html"><img class="secLogo" src="img/secondPageLogo.png" alt=""></a>
                 <div class="main-navbar">
                     <hr class="hr-navbarMenu">
                     <ul>
@@ -50,7 +50,7 @@
                         <li><a href="about.html" class="active">ABOUT US</a></li>
                         <li><a href="ourService.html">OUR SERVICE</a></li>
                         <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
-                        <li><a href="reqruipment.html">RECRUIPMENT</a></li>
+                        <li><a href="reqruitment.html">RECRUITMENT</a></li>
                         <li><a href="partners.html">PARTNERS</a></li>
                         <li><a href="contact.html">CONTACTS</a></li>
                     </ul>
@@ -124,3 +124,4 @@
 <!-- /js -->
 </body>
 </html>
+
