--- a/adduction.html
+++ b/adduction.html
@@ -42,7 +42,7 @@
                 <div class="mobile-nav-button">
                     <a class="mobile-nav-trigger"><i class="fa fa-bars" aria-hidden="true"></i></a>
                 </div>
-                <a href="#"><img class="secLogo" src="img/secondPageLogo.png" alt=""></a>
+                <a href="index.html"><img class="secLogo" src="img/secondPageLogo.png" alt=""></a>
                 <div class="main-navbar">
                     <hr class="hr-navbarMenu">
                     <ul>
@@ -50,7 +50,7 @@
                         <li><a href="about.html">ABOUT US</a></li>
                         <li><a href="ourService.html">OUR SERVICE</a></li>
                         <li><a href="adduction.html" class="active">ADDUCTION AND INFORMATION</a></li>
-                        <li><a href="reqruipment.html">RECRUIPMENT</a></li>
+                        <li><a href="reqruitment.html">RECRUITMENT</a></li>
                         <li><a href="partners.html">PARTNERS</a></li>
                         <li><a href="contact.html">CONTACTS</a></li>
                     </ul>
@@ -60,7 +60,10 @@
         </header>
         <!-- /header -->
     </section>
-<section class="info">
+
+    <form action="post"  id="ecommunication-page-form-1">
+
+    <section class="info">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12 col-xs-12">
@@ -70,7 +73,7 @@
                             <label class="control-label form-addon-style" for="tel">Company</label>
                         </div>
                         <div class="col-sm-9 col-xs-12">
-                            <input type="tel" name="tel" id="tel" class="form-control">
+                            <input type="tel" name="tel" id="tel" class="form-control" data-validetta="required">
                         </div>
                     </div>
                 </div>
@@ -80,7 +83,7 @@
                             <label class="control-label form-addon-style" for="name">Name</label>
                         </div>
                         <div class="col-sm-9 col-xs-12">
-                            <input type="tel" name="tel" id="name" class="form-control">
+                            <input type="tel" name="tel" id="name" class="form-control" data-validetta="required">
                         </div>
                     </div>
                 </div>
@@ -90,7 +93,7 @@
                             <label class="control-label form-addon-style" for="phone">Phone</label>
                         </div>
                         <div class="col-sm-9 col-xs-12">
-                            <input type="tel" name="tel" id="phone" class="form-control">
+                            <input type="tel" name="tel" id="phone" class="form-control" data-validetta="required,number">
                         </div>
                     </div>
                 </div>
@@ -100,7 +103,7 @@
                             <label class="control-label form-addon-style" for="email">Email</label>
                         </div>
                         <div class="col-sm-9 col-xs-12">
-                            <input type="tel" name="tel" id="email" class="form-control">
+                            <input type="tel" name="tel" id="email" class="form-control" data-validetta="required,email">
                         </div>
                     </div>
                 </div>
@@ -113,7 +116,7 @@
                             <input type="text" name="text-box3" id="post-code" class="form-control">
                         </div>
                         <div class="col-sm-7 col-xs-9">
-                            <input type="text" name="text-box4" id="text-box4" class="form-control">
+                            <input type="text" name="text-box4" id="text-box4" class="form-control" data-validetta="required">
                         </div>
                     </div>
                 </div>
@@ -123,7 +126,7 @@
                             <label class="control-label form-addon-style" for="country">Country</label>
                         </div>
                         <div class="col-sm-9 col-xs-12">
-                            <input type="tel" name="tel" id="country" class="form-control">
+                            <input type="tel" name="tel" id="country" class="form-control" data-validetta="required">
                         </div>
                     </div>
                 </div>
@@ -175,14 +178,14 @@
             <div class="col-md-8 col-md-offset-2">
             <form>
                 <div class="form-group">
-                    <textarea class="form-control" rows="5" id="comment" placeholder="Your message"></textarea>
+                    <textarea class="form-control" rows="5" id="comment" placeholder="Your message" data-validetta="required"></textarea>
                 </div>
             </form>
-            <button>SEND</button>
+            <button type="submit">SEND</button>
         </div>
         </div>
     </section>
-
+    </form>
     <section class="footer-shadow">
         <div class="container footer-logo">
             <div class="row">
