--- a/ourService.html
+++ b/ourService.html
@@ -43,7 +43,7 @@
         <div class="mobile-nav-button">
             <a class="mobile-nav-trigger"><i class="fa fa-bars" aria-hidden="true"></i></a>
         </div>
-        <a href="#"><img class="secLogo" src="img/secondPageLogo.png" alt=""></a>
+        <a  href="#"><img class="secLogo" src="img/secondPageLogo.png" alt=""></a>
         <div class="main-navbar">
             <hr class="hr-navbarMenu">
             <ul>
@@ -51,7 +51,7 @@
                 <li><a href="about.html">ABOUT US</a></li>
                 <li><a href="ourService.html" class="active">OUR SERVICE</a></li>
                 <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
-                <li><a href="reqruipment.html">RECRUIPMENT</a></li>
+                <li><a href="reqruitment.html">RECRUITMENT</a></li>
                 <li><a href="partners.html">PARTNERS</a></li>
                 <li><a href="contact.html">CONTACTS</a></li>
             </ul>
@@ -65,12 +65,12 @@
 
     <div class="container">
         <ul class="test1 nav nav-tabs col-md-12 col-xs-12">
-            <li class="active col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu1"><p>1</p><span>Web Design</span><i class="glyphicon glyphicon-menu-down"></i></a></li>
-            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu2"><p>2</p><span>Search engine Optimisation</span><i class="glyphicon glyphicon-menu-down"></i></a></li>
-            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu3"><p>3</p><span>Web hosting</span><i class="glyphicon glyphicon-menu-down"></i></a></li>
-            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu4"><p>4</p><span>Applications and Software</span><i class="glyphicon glyphicon-menu-down"></i></a></li>
-            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu5"><p>5</p><span>Systems and Network</span><i class="glyphicon glyphicon-menu-down"></i></a></li>
-            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu6"><p>6</p><span>VOIP solutions</span><i class="glyphicon glyphicon-menu-down"></i></a></li>
+            <li class="active col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu1"><p>1</p><span>Web Design</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
+            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu2"><p>2</p><span>Search engine Optimisation</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
+            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu3"><p>3</p><span>Web hosting</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
+            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu4"><p>4</p><span>Applications and Software</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
+            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu5"><p>5</p><span>Systems and Network</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
+            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu6"><p>6</p><span>VOIP solutions</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
         </ul>
         <div class="tab-content">
             <div id="menu1" class="tab-pane fade in active">
