--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
             <div class="col-xs-12 col-sm-6">
                 <div class="section-box-inner">
                     <div class="cover-image-area">
-                        <img src="http://dev.i-w-s-logiciel.com/img/sav/1.png" alt="">
+                        <img src="img/AB1.png" alt="">
                     </div>
                     <div class="section-text-area">
                         <h2 class="section-box-title">Une équipe d’experts à votre écoute</h2>
@@ -78,7 +78,7 @@
             <div class="col-xs-12 col-sm-6 box-border">
                 <div class="section-box-inner">
                     <div class="cover-image-area">
-                        <img src="http://dev.i-w-s-logiciel.com/img/sav/2.png" alt="">
+                        <img src="img/AB2.png" alt="">
                     </div>
                     <div class="section-text-area">
                         <h3 class="section-box-title">Un traitement efficace de toutes vos demandes</h3>
