--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <img src="img/icon-1.png" alt="">
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
-                    <h4>WEB DESIGN DETAILS</h4>
+                    <h4>Application and Softwere</h4>
                     <p>Search engine optimisation is an essential factor for performance of your internet business.
                         Visibility to potential customers on major search engines is important to generate
                         a maximum quantity of visits...
@@ -142,7 +142,7 @@
                     <img src="img/icon-2.png" alt="">
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
-                    <h4>Search Engine Optimisation</h4>
+                    <h4>Web Creation</h4>
                     <p>Search engine optimisation is an essential factor for performance of your internet business.
                         Visibility to potential customers on major search engines is important to generate
                         a maximum quantity of visits...
@@ -160,7 +160,7 @@
                     <img src="img/icon-3.png" alt="">
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
-                    <h4>Web hosting</h4>
+                    <h4>Search Engine Optimisation</h4>
                     <p>Search engine optimisation is an essential factor for performance of your internet business.
                         Visibility to potential customers on major search engines is important to generate
                         a maximum quantity of visits...
@@ -178,7 +178,7 @@
                     <img src="img/icon-4.png" alt="">
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
-                    <h4>Applications and Software</h4>
+                    <h4>Web hosting</h4>
                     <p>Search engine optimisation is an essential factor for performance of your internet business.
                         Visibility to potential customers on major search engines is important to generate
                         a maximum quantity of visits...
@@ -196,7 +196,7 @@
                     <img src="img/icon-5.png" alt="">
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
-                    <h4>Systems and Network</h4>
+                    <h4>Security, Sistem, Network</h4>
                     <p>Search engine optimisation is an essential factor for performance of your internet business.
                         Visibility to potential customers on major search engines is important to generate
                         a maximum quantity of visits...
@@ -214,7 +214,7 @@
                     <img src="img/icon-6.png" alt="">
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
-                    <h4>VOIP solutions</h4>
+                    <h4>VOIP Telephone and Callface</h4>
                     <p>Search engine optimisation is an essential factor for performance of your internet business.
                         Visibility to potential customers on major search engines is important to generate
                         a maximum quantity of visits...
@@ -232,7 +232,7 @@
                     <img src="img/icon-6.png" alt="">
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
-                    <h4>VOIP solutions</h4>
+                    <h4>Security access</h4>
                     <p>Search engine optimisation is an essential factor for performance of your internet business.
                         Visibility to potential customers on major search engines is important to generate
                         a maximum quantity of visits...
@@ -250,7 +250,7 @@
                     <img src="img/icon-6.png" alt="">
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
-                    <h4>VOIP solutions</h4>
+                    <h4>Controll and allarm</h4>
                     <p>Search engine optimisation is an essential factor for performance of your internet business.
                         Visibility to potential customers on major search engines is important to generate
                         a maximum quantity of visits...
@@ -270,14 +270,13 @@
                     <hr>
                 </div>
             <div class="owl-carousel owl-theme site-second-carousel">
-                <div class="item"><img src="img/partner-logo.png" alt=""></div>
-                <div class="item"><img src="img/partner-logo.png" alt=""></div>
-                <div class="item"><img src="img/partner-logo.png" alt=""></div>
-                <div class="item"><img src="img/partner-logo.png" alt=""></div>
-                <div class="item"><img src="img/partner-logo.png" alt=""></div>
-                <div class="item"><img src="img/partner-logo.png" alt=""></div>
-                <div class="item"><img src="img/partner-logo.png" alt=""></div>
-                <div class="item"><img src="img/partner-logo.png" alt=""></div>
+                <div class="item"><img src="img/partners/11-1.jpg" alt=""></div>
+                <div class="item"><img src="img/partners/11-2.jpg" alt=""></div>
+                <div class="item"><img src="img/partners/11-3.jpg" alt=""></div>
+                <div class="item"><img src="img/partners/11-4.jpg" alt=""></div>
+                <div class="item"><img src="img/partners/11-5.jpg" alt=""></div>
+                <div class="item"><img src="img/partners/11-6.jpg" alt=""></div>
+                <div class="item"><img src="img/partners/11-7.jpg" alt=""></div>
             </div>
         </div>
         </section>
