--- a/reqruitment.html
+++ b/reqruitment.html
@@ -65,7 +65,7 @@
     <div class="row">
         <div class="col col-md-3">
             <div class="work-buttons">
-            <button class="accordion-toggle one-b collapsed" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            <button class="accordion-toggle one-b " type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                 Programming
             </button>
                  <div id="collapseExample" class="collapse in">
